<resources>
    <string name="app_name">Auto Fake Call</string>
    <string name="name">Name&#8230;</string>
    <string name="number">Number&#8230;</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="time">Time</string>
    <string name="minutes">Minutes</string>
    <string name="schedule">Schedule</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="duration">Duration</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="show_application_icon">Show application icon in launcher</string>
    <string name="number_to_dial">Number to dial to launch app</string>
    <string name="default_number">111</string>
    <string name="hang_up_after">Hang Up After</string>
    <string name="voice">Voice</string>
    <string name="about">About</string>
    <string name="about_message">This Application Was Built By Zelalem Mekonen.\nGithub: https://www.github.com/zolamk/fake-call-lolipop</string>
    <string name="private_number">Private</string>
    <string name="unknown">Unknown</string>
    <string name="missed_call">Missed Call</string>
    <string name="sms">SMS</string>
    <string name="message">Message...</string>
    <string name="draft">Draft</string>



    //para s6


    <string name="incall_incoming_call">Incoming call</string>
    <string name="incall_incoming_hold">Hold</string>
    <string name="extra_volume">Extra volume</string>
    <string name="keypad">Keypad</string>
    <string name="incall_incoming_mute">Mute</string>
    <string name="samsung_bluetooth">Bluetooth</string>
    <string name="samsung_handle">REJECT CALL WITH MESSAGE</string>
    <string name="samsung_add_call">Add call</string>
    <string name="incall_incoming_speaker">Speaker</string>
    <string name="samsung">SAMSUNG</string>
    <string name="android">ANDROID</string>
    <string name="tensecs">10 secs</string>
    <string name="_1_min">1 min</string>
</resources>
