<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                tools:context="com.mio.jrdv.autofakecall.ScheduleCallActivity"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

    <fragment
            android:id="@+id/selectContactCallFragment"
            android:layout_width="match_parent"
            class="com.mio.jrdv.autofakecall.SelectContactFragment"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_select_contact">
    </fragment>

    <!-- //no lo vpoy a usar ..solo hara fake calls
    <RadioGroup android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:id="@+id/callTypeRadioGroup"
    android:layout_marginTop="137dp">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming"
        android:id="@+id/incomingRadioButton"
        android:checked="true"
        android:layout_margin="@dimen/layout_margin"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outgoing"
        android:id="@+id/outgoingRadioButton"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missed"
        android:id="@+id/missedRadioButton"
        android:layout_margin="@dimen/layout_margin"/>
</RadioGroup>
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/RLTIMEyTYPEJUNTOS"
        android:orientation="horizontal"
        android:layout_below="@id/selectContactCallFragment">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/RLTimeSelect"
        android:background="@android:color/holo_blue_bright"
        >

    <RadioGroup android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/callTimeRadioGroup"
        android:layout_marginTop="0dp"
        android:checked="false" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tensecs"
            android:id="@+id/tensecs"
            android:checked="true"
            android:layout_margin="@dimen/layout_margin"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_min"
            android:id="@+id/oneminute"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5 min"
            android:id="@+id/fiveminutes"
            android:layout_margin="@dimen/layout_margin"/>
    </RadioGroup>

        <fragment

            android:id="@+id/callScheduleTimePicker"
            android:layout_width="match_parent"
            tools:layout="@layout/fragment_select_time"
            class="com.mio.jrdv.autofakecall.SelectTimeFragment"
            android:layout_height="40dp">
        </fragment>

    </RelativeLayout>

                                                                                                                                                                 
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:id="@+id/RLTypeSelect"
        android:layout_below="@id/RLTimeSelect"
        android:background="@color/darkWhite">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/SamsungorAndroidPicture"
            android:background="@drawable/ui_android_50_incoming"
            android:scaleType="fitCenter"
             />


    <RadioGroup android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/BrandTypeRadioGroup"
        android:layout_below="@id/SamsungorAndroidPicture"
         >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samsung"
            android:id="@+id/SAmsungRadioButton"
            android:checked="true"
            android:layout_margin="@dimen/layout_margin"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:id="@+id/GogleRadioButton"/>

    </RadioGroup>

    </RelativeLayout>


    </LinearLayout>

    <!-- //no lo vpoy a usar ..la duration sera fija de 30 segs
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/callDurationInput"
            android:hint="@string/duration"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_below="@id/callScheduleTimePicker"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
            -->

    <EditText
            android:id="@+id/hangUpAfterInput"
            android:layout_below="@id/RLTIMEyTYPEJUNTOS"
            android:hint="@string/hang_up_after"
            android:inputType="number"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RLRecord"
        android:background="@color/colorAccent"
        android:layout_below="@id/hangUpAfterInput">

    <EditText
            android:id="@+id/voiceFileInput"

            android:hint="@string/voice"
            android:focusable="false"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <br.com.safety.audio_recorder.AudioRecordButton
        android:id="@+id/audio_record_button"
        android:layout_below="@id/voiceFileInput"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="80dp" />


    </RelativeLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:id="@+id/setCallScheduleButton"
            android:layout_margin="@dimen/layout_margin"
            android:onClick="onClickSchedule"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

     </LinearLayout>


    </ScrollView>



</RelativeLayout>
