<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mains6"
    android:background="#fffafafa"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/up_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s6_unkonwn01"
            android:layout_weight="48.0"
            android:background="#ff50a52e">

            <RelativeLayout
                android:id="@+id/incomingCallRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="9dp">

                <TextView
                    android:id="@+id/incomingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/incall_incoming_call"
                    android:textColor="#ffeefae6"
                    android:textSize="16sp" />
                <com.mio.jrdv.autofakecall.AnimListIncomingCall
                    android:id="@+id/loading"
                    android:background="@drawable/note5_loading"
                    android:layout_width="46dp"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@id/incomingTV"
                    android:layout_centerVertical="true" />

               <!--
                <TextView
                    android:id="@+id/timeduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="#ffe7fbe0"
                    android:textSize="16sp"
                    android:visibility="invisible" />
                -->
                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="#ffe7fbe0"
                    android:textSize="16sp"
                    android:visibility="invisible" />



                <TextView
                    android:id="@+id/hold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/incall_incoming_hold"
                    android:textColor="#ffe7fbe0"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/RLFoto"

                android:layout_centerInParent="true">

                <!--
                <ImageView
                    android:id="@+id/circle_head_photo"
                    android:layout_width="@dimen/s6_circle_head"
                    android:layout_height="@dimen/s6_circle_head"
                    android:scaleType="centerCrop" />
                    -->
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/circle_head_photo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/samsung_no_pic"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FFFFFFFF"
                    android:layout_gravity="center"/>

            </LinearLayout>
                <TextView
                    android:id="@+id/nameTV"
                    android:layout_below="@+id/RLFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffffff"
                    android:textSize="32sp"
                    android:text="ejemplo de llmada"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/numberTV"
                    android:layout_below="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffdaddd9"
                    android:textSize="14sp"
                    android:text="123456789"
                    android:layout_centerInParent="true"/>


        </RelativeLayout>

        <RelativeLayout
android:id="@+id/down_layout"
android:background="#fffafafa"
android:layout_width="match_parent"
android:layout_height="@dimen/s6_unkonwn01"
android:layout_weight="77.0">

<RelativeLayout
android:id="@+id/receive_layout"
android:visibility="visible"
android:layout_width="match_parent"
android:layout_height="match_parent"
  >


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        >

    <ImageView android:id="@+id/note5_big_blue"
        android:background="@drawable/s5_jog_tab_left_bg_press"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
          android:id="@+id/receive"
         android:layout_width="@dimen/s6_unknow_llamadasboton"
         android:layout_height="@dimen/s6_unknow_llamadasboton"
          android:layout_marginLeft="30dp"
          android:src="@drawable/s6_answer_xml"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:background="@null"/>

        <!--
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/receive"
        android:layout_centerVertical="true">
        <ImageView
            android:id="@+id/answer_arrow_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down_white_24dp"
            android:rotation="90" />
        <ImageView android:id="@+id/answer_arrow_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-12dp"
            android:src="@drawable/ic_arrow_down_white_24dp"
            android:rotation="90" />
        <ImageView android:id="@+id/answer_arrow_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-12dp"
            android:src="@drawable/ic_arrow_down_white_24dp"
            android:rotation="90" />
    </LinearLayout>

    -->



    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"

        >


        <com.mio.jrdv.autofakecall.AnimListLoaderGreen
            android:layout_height="20dp"
            android:layout_width="70dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="-2dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <ImageView android:id="@+id/note5_big_red"
            android:background="@drawable/s5_unlock_right_press"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

<ImageButton
    android:id="@+id/reject"
    android:layout_width="@dimen/s6_unknow_llamadasboton"
    android:layout_height="@dimen/s6_unknow_llamadasboton"
    android:layout_marginRight="30dp"
    android:src="@drawable/s6_reject_xml"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:scaleType="fitCenter"
    android:background="@null"/>

    <!--
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/reject"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/reject_arrow_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-12dp"
                android:src="@drawable/ic_arrow_down_white_24dp"
                android:rotation="270" />
            <ImageView android:id="@+id/reject_arrow_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-12dp"
                android:src="@drawable/ic_arrow_down_white_24dp"
                android:rotation="270" />
            <ImageView android:id="@+id/reject_arrow_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_arrow_down_white_24dp"
                android:rotation="270" />
        </LinearLayout>

        -->

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"

        >


        <com.mio.jrdv.autofakecall.AnimListLoaderRed
            android:layout_height="20dp"
            android:layout_width="70dp"
            />

    </RelativeLayout>



    <TextView
    android:textSize="12sp"
    android:textColor="#ff515151"
    android:gravity="center_vertical|center_horizontal"
    android:id="@+id/handle"
    android:background="#ffe6e6e6"
    android:layout_width="match_parent"
    android:layout_height="28dp"
    android:text="@string/samsung_handle"
    android:layout_alignParentBottom="true" />

<ImageView
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:src="@drawable/s6_arrow"
    android:layout_above="@id/handle"
    android:layout_centerHorizontal="true" />

</RelativeLayout>

<LinearLayout
android:orientation="vertical"
android:id="@+id/endcall_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:visibility="invisible">

<LinearLayout
android:gravity="center_horizontal|center_vertical"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="18dp"
  >

<ImageView
    android:layout_width="@dimen/s6_viewpager_dot"
    android:layout_height="@dimen/s6_viewpager_dot"
    android:src="@drawable/s6_viewpager_dot"
    android:tint="#ff666666" />

<ImageView
    android:layout_width="@dimen/s6_viewpager_dot"
    android:layout_height="@dimen/s6_viewpager_dot"
    android:layout_marginLeft="12dp"
    android:src="@drawable/s6_viewpager_dot"
    android:tint="#ff999999" />

</LinearLayout>

<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="12dp"
android:layout_marginTop="26dp"
android:layout_marginRight="12dp">


<LinearLayout
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0"
    >

<ImageView
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_add_call"
    android:layout_gravity="center"
    />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/samsung_add_call"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>
</LinearLayout>

<LinearLayout

android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0">

<ImageView
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_extra_volume"
    android:layout_gravity="center"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/extra_volume"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>
</LinearLayout>

<LinearLayout
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0">


<ImageView
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_bluetooth"
    android:layout_gravity="center"/>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/samsung_bluetooth"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>
</LinearLayout>

    </LinearLayout>

<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginLeft="12dp"
android:layout_marginTop="32dp"
android:layout_marginRight="12dp">


<LinearLayout
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0">

<ImageView
    android:id="@+id/speaker"
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_speak"
    android:layout_gravity="center"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/incall_incoming_speaker"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>
</LinearLayout>

<LinearLayout
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0">

<ImageView
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_keypad"
    android:layout_gravity="center"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/keypad"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>

</LinearLayout>

<LinearLayout
android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
android:orientation="vertical"
android:layout_width="@dimen/s6_unkonwn01"
android:layout_height="wrap_content"
android:layout_weight="1.0">


<ImageView
    android:layout_width="@dimen/s6_button"
    android:layout_height="@dimen/s6_button"
    android:src="@drawable/s6_mute"
    android:layout_gravity="center"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/incall_incoming_mute"
    style="@style/style_s6_btn_text"
    android:layout_gravity="center"/>
</LinearLayout>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageButton
        android:layout_weight="2"
        android:id="@+id/end_call"
        android:layout_width="@dimen/s6_unknow_llamadasboton"
        android:layout_height="@dimen/s6_unknow_llamadasboton"
        android:layout_marginTop="40dp"
        android:src="@drawable/s6_endcall_xml"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickEndCall"/>
</LinearLayout>

    </LinearLayout>

    </RelativeLayout>

        </LinearLayout>

<RelativeLayout
android:id="@+id/incall_fullscreen_black"
android:background="#000000"
android:visibility="gone"
android:layout_width="match_parent"
android:layout_height="match_parent" />


</RelativeLayout>
